# MyArkanoid

./: .gitignore  AssetManager.cpp  AssetManager.h  Ball.cpp  Ball.h  BaseBlock.h  Block.cpp  Block.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  LICENSE.txt  MyArkanoid.sln  MyArkanoid.vcxproj  MyArkanoid.vcxproj.filters  Paddle.cpp  Paddle.h  Physics.cpp  Physics.h  RCa26928  README.md  Rock.h  main.cpp  resource.h
assets/levels/: level_6.json  level_7.json  levels.json
include/core/: Ball.h  BaseBlock.h  Block.h  Config.h  GameEngine.h  Paddle.h  Rock.h  StateMachine.h
include/engine/: CollisionManager.h  Config.h  GameEngine.h  GameState.h  InputHandler.h  PhysicsEngine.h  Renderer.h  SoundManager.h
include/entities/: Ball.h  ControllableEntity.h  Entity.h  MovableEntity.h  Paddle.h  StaticEntity.h
include/entities/blocks/: BaseBlock.h  Block.h  Rock.h
include/entities/powerups/: BasePowerUp.h  ExpandPaddlePowerUp.h  ExtraLifePowerUp.h  PowerUp.h  PowerUpFactory.h  ShrinkPaddlePowerUp.h  SlowBallPowerUp.h
include/entities/powerups/PowerUpEffects/: ExpandPaddleEffect.h  ExtraLifeEffect.h  PowerUpEffect.h  ScalePaddleEffect.h  ShrinkPaddleEffect.h  SlowBallEffect.h
include/game_states/: GameOverState.h  GameState.h  LevelSelectState.h  MainMenuState.h  OptionsState.h  State.h
include/game_states/MenuState/: LevelSelectState.h  MainMenuState.h  MenuStateBase.h  OptionsState.h
include/managers/: AssetManager.h  LevelManager.h  PowerUpManager.h  SoundManager.h
include/physics/: BlockCollision.h  PaddleCollision.h  Physics.h  SpatialGrid.h  WallCollision.h
include/resource/: AssetManager.h  AudioManager.h
include/systems/: ICollisionObserver.h  InputSystem.h  PhysicsSystem.h  RenderSystem.h  SpatialGrid.h
include/systems/solvers/: BlockCollisionSolver.h  CollisionSolver.h  PaddleCollisionSolver.h  PhysicsUtils.h  WallCollisionSolver.h
src/core/: Ball.cpp  Block.cpp  GameEngine.cpp  Paddle.cpp  Rock.cpp  StateMachine.cpp
src/engine/: CollisionManager.cpp  GameEngine.cpp  GameState.cpp  InputHandler.cpp  PhysicsEngine.cpp  Renderer.cpp  SoundManager.cpp
src/entities/: Ball.cpp  Paddle.cpp
src/entities/blocks/: BaseBlock.cpp  Block.cpp  Rock.cpp
src/entities/powerups/: BasePowerUp.cpp  ExpandPaddlePowerUp.cpp  ExtraLifePowerUp.cpp  PowerUp.cpp  PowerUpFactory.cpp  ShrinkPaddlePowerUp.cpp  SlowBallPowerUp.cpp
src/entities/powerups/PowerUpEffects/: ExpandPaddleEffect.cpp  ExtraLifeEffect.cpp  ScalePaddleEffect.cpp  ShrinkPaddleEffect.cpp  SlowBallEffect.cpp
src/game_states/: GameOverState.cpp  GameState.cpp  LevelSelectState.cpp  MainMenuState.cpp  OptionsState.cpp  State.cpp
src/game_states/MenuState/: LevelSelectState.cpp  MainMenuState.cpp  MenuStateBase.cpp  OptionsState.cpp
src/managers/: AssetManager.cpp  LevelManager.cpp  PowerUpManager.cpp  SoundManager.cpp
src/physics/: BlockCollision.cpp  PaddleCollision.cpp  Physics.cpp  SpatialGrid.cpp  WallCollision.cpp
src/resource/: AssetManager.cpp  AudioManager.cpp
src/systems/: InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  SpatialGrid.cpp
src/systems/solvers/: BlockCollisionSolver.cpp  PaddleCollisionSolver.cpp  WallCollisionSolver.cpp
